--- a/Basic JavaScript Projects/Project2_functions/index.html
+++ b/Basic JavaScript Projects/Project2_functions/index.html
@@ -6,7 +6,7 @@
     <body>
         <button onclick="My_First_Function()">
         Click me!</button>
-        <p id="Green_Text">This should be green.</p>
+        <p id="Green_Text">This text is black.</p>
         <p id="Concatenate" onclick="conFunction()">Click this</p>
     </body>
 </html>
