--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <meta name="description" content="A basic HTML, CSS and JavaScript Calculator">
     <meta name="author" content="Gabe_Larson">
-    <script src="JavaScript/Calculator_JavaScript.Js" defer></script>
+    <script src="JS/Calculator_JavaScript.js" defer></script>
     <link rel="stylesheet" href="CSS/Calculator_CSS.css">
 
 </head>
@@ -38,7 +38,7 @@
 
             <button type="button" class="decimal function" value=".">.</button>
             <button type="button" class="all-clear function" value="all-clear">AC</button>
-            <button type="button" class="equal-sign operaator" value="=">=</button>
+            <button type="button" class="equal-sign operator" value="=">=</button>
         </div>
     </div>
 </body>
