--- a/Pizza_Project/Pizza.html
+++ b/Pizza_Project/Pizza.html
@@ -44,6 +44,21 @@
                     <input class="toppings" type="checkbox" name="Topping"
                         value="Salami">Salami<br>
                 </div>
+
+                <div class="menu middle">
+                    <h3>Vegetables:</h3>
+                    <input class="vegetables" type="checkbox" name="Vegie"
+                        value="Mushrooms">Mushrooms<br>
+                    <input class="vegetables" type="checkbox" name="Vegie"
+                        value="Onions">Onions<br>
+                    <input class="vegetables" type="checkbox" name="Vegie"
+                        value="Olives">Olives<br>
+                    <input class="vegetables" type="checkbox" name="Vegie"
+                        value="Tomatoes">Tomatoes<br>
+                    <input class="vegetables" type="checkbox" name="Vegie"
+                        value="Green Peppers">Green Peppers<br>
+                </div>
+
                 <div id="cart">
                     <div id="showText"></div>
                     <div id="totalPrice"></div>
