--- a/Pizza_Project/Pizza.html
+++ b/Pizza_Project/Pizza.html
@@ -47,15 +47,15 @@
 
                 <div class="menu middle">
                     <h3>Vegetables:</h3>
-                    <input class="vegetables" type="checkbox" name="Vegie"
+                    <input class="toppings" type="checkbox" name="Topping"
                         value="Mushrooms">Mushrooms<br>
-                    <input class="vegetables" type="checkbox" name="Vegie"
+                    <input class="toppings" type="checkbox" name="Topping"
                         value="Onions">Onions<br>
-                    <input class="vegetables" type="checkbox" name="Vegie"
+                    <input class="toppings" type="checkbox" name="Topping"
                         value="Olives">Olives<br>
-                    <input class="vegetables" type="checkbox" name="Vegie"
+                    <input class="toppings" type="checkbox" name="Topping"
                         value="Tomatoes">Tomatoes<br>
-                    <input class="vegetables" type="checkbox" name="Vegie"
+                    <input class="toppings" type="checkbox" name="Topping"
                         value="Green Peppers">Green Peppers<br>
                 </div>
 
